deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: nkoster-webfont
  name: nkoster-webfont
  namespace: nkoster
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nkoster-webfont
  template:
    metadata:
      labels:
        app: nkoster-webfont
    spec:
      containers:
      - name: nkoster-webfont
        args:
        - node
        - server.js
        image: registry.portavita.net/nkoster/nkoster-node:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 9000
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 9000
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 256Mi
      restartPolicy: Always
