service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nkoster-webfont
  name: nkoster-webfont
  namespace: nkoster
spec:
  ports:
  - name: nkoster-webfont
    port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    app: nkoster-webfont
  type: ClusterIP
