ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-private
  labels:
    app: nkoster-webfont
  name: nkoster-webfont
  namespace: nkoster
spec:
  rules:
  - host: nkoster.pvdev.portavita.net
    http:
      paths:
      - backend:
          serviceName: nkoster-webfont
          servicePort: 80
        path: /
